Fixed header on mobile version

--- a/sites/all/themes/summa/css/pages.css
+++ b/sites/all/themes/summa/css/pages.css
@@ -979,7 +979,7 @@ ul.nice-menu li {
 	.front .pane-hp-slideshow { display:none;}
 	.front #page-wrapper { background:none;}
 	#page { max-width:95%; margin:1em auto 0;}
-	#page-wrapper {background-position: 0 154px;}
+	#page-wrapper {background-position: 0 93px;}
 	.top-sociamedia .top-elements { max-width:100%;}
 	#logo { width:22%;}
 	#logo img { width:100%;}
